# mkdocs-per

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
about/: index.html
devops/git/: index.html
docs/: about.md  index.md
docs/assets/css/: extra.css
docs/assets/js/: shortcuts.js
docs/devops/: git.md
docs/linux_bash/: linux_commands.md
docs/openapi/: index.md  petstore.md  robotstracker.json  robotstracker.md  uspto.md
linux_bash/linux_commands/: index.html
openapi/: index.html
openapi/petstore/: index.html
openapi/robotstracker/: index.html
openapi/uspto/: index.html
overrides/: main.html
overrides/partials/: copyright.html
search/: search_index.json
