[tool.poetry]
name = "mkdocs-per"
version = "0.1.0"
description = ""
authors = ["Chanho Ahn <moz5691@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.2.3"
mkdocs-material = "^8.1.9"
mike = "^1.1.2"
mkdocs-git-revision-date-plugin = "^0.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
